--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.1"
 services:
-  dot-client:
+  angular-client:
     container_name: angular
     image: ambersive/angular:latest
     ports:
