--- a/config/nginx-site.conf
+++ b/config/nginx-site.conf
@@ -14,7 +14,7 @@ server {
 	access_log /dev/stdout;
 
 	location / {
-		try_files $uri $uri/ /index.php?$query_string;
+		try_files $uri $uri/ /index.html?$query_string;
 	}
 
 	location ~/socket.io {
@@ -29,18 +29,6 @@ server {
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection "upgrade";
-	}
-
-	# pass the PHP scripts to FastCGI server listening on socket
-	#
-	location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_split_path_info  ^(.+\.php)(/.+)$;
-        fastcgi_index            index.php;
-        fastcgi_pass             unix:/run/php/php7.4-fpm.sock;
-        include                  fastcgi_params;
-        fastcgi_param   PATH_INFO       $fastcgi_path_info;
-        fastcgi_param   SCRIPT_FILENAME $document_root$fastcgi_script_name;
 	}
 
     location ~* \.(jpg|jpeg|gif|png|ico|webp|tiff|ttf|svg)$ {
