--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -4,7 +4,7 @@ services:
     container_name: angular-docker
     build:
       context: ./
-      dockerfile: dockerfile
+      dockerfile: Dockerfile
     ports:
       - "8181:80"
     volumes:
