--- a/config/nginx-site.conf
+++ b/config/nginx-site.conf
@@ -2,7 +2,7 @@ server {
 	listen   80; ## listen for ipv4; this line is default and implied
 	listen   [::]:80 default ipv6only=on; ## listen for ipv6
 
-	root /var/www/html/dist;
+	root /var/www/html;
 	index index.php;
 
 	server_name _;
@@ -14,22 +14,8 @@ server {
 	access_log /dev/stdout;
 
 	location / {
-		try_files $uri $uri/ /index.html?$query_string;
-	}
-
-	location ~/socket.io {
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header Host $http_host;
-		proxy_set_header X-NginX-Proxy true;
-
-		proxy_pass http://0.0.0.0:6001;
-		proxy_redirect off;
-
-		proxy_http_version 1.1;
-		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_header Connection "upgrade";
-	}
+        try_files $uri $uri/ /index.html;
+    }
 
     location ~* \.(jpg|jpeg|gif|png|ico|webp|tiff|ttf|svg)$ {
             expires           5d;
