Fix issue with nginx routing for angular app

--- a/config/nginx-site.conf
+++ b/config/nginx-site.conf
@@ -3,7 +3,7 @@ server {
 	listen   [::]:80 default ipv6only=on; ## listen for ipv6
 
 	root /var/www/html;
-	index index.php;
+	index index.html;
 
 	server_name _;
 
@@ -14,7 +14,8 @@ server {
 	access_log /dev/stdout;
 
 	location / {
-        try_files $uri $uri/ /index.html;
+        index  index.html;
+     	try_files $uri $uri/ /index.html?$args;
     }
 
     location ~* \.(jpg|jpeg|gif|png|ico|webp|tiff|ttf|svg)$ {
